--- a/css/results.css
+++ b/css/results.css
@@ -87,9 +87,10 @@ header {
   -webkit-transition: height 0.5s;
   overflow: hidden;
 }
+
 .cards:hover {
   transition-duration: 300ms;
-  height: 215px;
+  height: 280px; 
   opacity: 80%;
 }
 .cards > h3 {
@@ -115,28 +116,118 @@ header {
   margin: 14px 4px 3px 14px; */ /****************/
   font-size: 16px;
 }
-.base > p {
-  font-size: 12px;
-  /* margin-top: 5px;
-  margin-left: 14px; */ /****************/
+p {
+  font-size: 14px;
 }
 
 img {
-  /* margin: 14px; */
+  /* margin: 14px;  */
   border-radius: 5px;
   float: left;
   margin-right: 14px;
   /* padding: 14px; */
-  /* margin-right: 30px; */
+  /* margin-right: 14px;  */
 }
 .details {
-  display: block;
-  position: relative;
+  /* position: relative; */
   font-family: 'Karla', sans-serif;
-  padding: 14px;
-  padding-top: 0;
+  /* padding: 14px; */
+  /* padding-top: 0; */
+  float: left;
+  margin-left: 14px;
+  width: 140px;
+  height: 180px;
 }
+.details * {
+  margin-bottom: 5px;
+}
+.description {
+  width: 283px;
+  height: 180px;
+  /* margin: 14px; */
+  float: left;
+}
+.price {
+  font-size: 12px;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 5px;
+  margin-top: 80px;
+  background-color: rgb(251, 249, 115);
+  width: max-content;
+}
+.tags {
+  width: max-content; 
+  position: inline-block;
+  padding: 5px;
+  margin-right: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  background-color: thistle;
+  float: left;
+}
+/* .bottom {
+  display: grid; 
+} */
 
-.details > p {
-  font-size: 15px;
+/* .details > h3 {
+  font-size: 16px;
+  font-weight: bold;
 }
+.details > h4 {
+  font-size: 14px;
+  font-weight: bold;
+} */
+/* .img {
+  float: left;
+  width: 170px;
+  height: 100px;
+  text-align: center; */
+  /* margin: 20px;
+  margin-right: 30px; */
+/* } */
+/* .game {
+  display: inline-block; 
+  padding: 15px 15px 50px 15px;
+  border: solid 2px #ff4d4d; 
+  border-radius: 15px;
+  background-color:  #fffca7;
+  position: relative;
+  max-width: 200px; 
+}
+.game:hover {
+  transition-delay: 2s;
+  opacity: 50%;
+} 
+.caption > * {
+  /* border: solid 2px #ff4d4d;  */
+  /* padding: 10px; 
+  position: relative;
+  background-color:  #fffca7; 
+  text-align: center;  */
+  /* width: 179px;  */
+  /* top: 15px;  */
+  /* text-decoration: none;
+  color: #ff4d4d; */
+
+/* a {
+  text-decoration: none;
+  color: #ff4d4d;
+} */
+/*
+fig img{
+ border-radius: 20px 20px 0px 0px; 
+}
+figure:hover{
+  border-color: #ff4d4d; 
+}
+fig img:hover{
+  opacity: 0.6;
+} */
+/* 
+.insideWrap {
+  display: grid;
+  grid-template-columns: 131px 282px;
+  grid-gap: 14px;
+  margin: 14px;
+} */
