--- a/css/results.css
+++ b/css/results.css
@@ -27,13 +27,21 @@ header {
 } */
 
 @keyframes slideInFromLeft {
-  0% {transform: translateX(-100%);}
-  100% {transform: translateX(0);}
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 
 @keyframes fadein {
-  from {opacity: 0;}
-  to {opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* T I T L E */
@@ -41,7 +49,7 @@ header {
   margin-left: 270px;
   font-size: 40px;
   color: #003e65;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   font-weight: 500;
 }
 
@@ -55,7 +63,7 @@ header {
   text-align: right;
   margin-top: 2%;
   border-bottom: solid 1px #003e65;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   color: #003e65;
   padding-right: 48px;
   padding-bottom: 2px;
@@ -63,7 +71,7 @@ header {
 
 /* BLOCK LAYOUT */
 .wrapper {
-  display: grid; 
+  display: grid;
   grid-template-columns: 450px 450px;
   grid-gap: 18px;
   margin: 0% 15% 2% 18%;
@@ -81,7 +89,7 @@ header {
   text-decoration: none;
   font-weight: 400;
   color: black;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   box-shadow: 5px 5px rgba(222, 222, 222, 0.452);
   transition: height 0.5s;
   -webkit-transition: height 0.5s;
@@ -93,7 +101,7 @@ header {
   opacity: 80%;
 }
 .cards > h3 {
-  margin: 14px 4px 3px 14px; 
+  margin: 14px 4px 3px 14px;
   font-size: 16px;
 }
 .cards > p {
@@ -105,7 +113,7 @@ header {
 .base {
   width: 455px;
   height: 100px;
-  box-sizing: border-box; 
+  box-sizing: border-box;
   padding: 14px;
 }
 .base > h3 {
@@ -132,7 +140,7 @@ img {
 .details {
   display: block;
   position: relative;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   padding: 14px;
   padding-top: 0;
 }
