--- a/css/results.css
+++ b/css/results.css
@@ -98,7 +98,7 @@ header {
 
 .cards:hover {
   transition-duration: 300ms;
-  height: 280px; 
+  height: 280px;
   opacity: 80%;
 }
 .cards > h3 {
@@ -137,15 +137,13 @@ img {
   /* margin-right: 14px;  */
 }
 .details {
-<<<<<<< HEAD
   display: block;
   position: relative;
   font-family: "Karla", sans-serif;
   padding: 14px;
   padding-top: 0;
-=======
   /* position: relative; */
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   /* padding: 14px; */
   /* padding-top: 0; */
   float: left;
@@ -161,7 +159,6 @@ img {
   height: 180px;
   /* margin: 14px; */
   float: left;
->>>>>>> 586f2b39977abf1001c0751bc15fd757fe04ccec
 }
 .price {
   font-size: 12px;
@@ -173,7 +170,7 @@ img {
   width: max-content;
 }
 .tags {
-  width: max-content; 
+  width: max-content;
   position: inline-block;
   padding: 5px;
   margin-right: 10px;
@@ -199,7 +196,7 @@ img {
   width: 170px;
   height: 100px;
   text-align: center; */
-  /* margin: 20px;
+/* margin: 20px;
   margin-right: 30px; */
 /* } */
 /* .game {
@@ -217,13 +214,13 @@ img {
 } 
 .caption > * {
   /* border: solid 2px #ff4d4d;  */
-  /* padding: 10px; 
+/* padding: 10px; 
   position: relative;
   background-color:  #fffca7; 
   text-align: center;  */
-  /* width: 179px;  */
-  /* top: 15px;  */
-  /* text-decoration: none;
+/* width: 179px;  */
+/* top: 15px;  */
+/* text-decoration: none;
   color: #ff4d4d; */
 
 /* a {
