--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,8 @@ body {
     "intro-header intro-header"
     "intro-image intro-descrip"
     "logo logo";
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
   margin: 0 0 3em 0;
 }
 
@@ -48,10 +49,16 @@ body {
   font-weight: bold;
 }
 
-.intro-image {
+.intro-image-container {
   grid-area: intro-image;
   margin: auto;
-  padding-left: 10rem;
+  /* padding-left: 10rem; */
+}
+
+.intro-image {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .intro-descrip {
