--- a/css/results.css
+++ b/css/results.css
@@ -253,7 +253,7 @@ fig img:hover{
   margin: 14px;
 } */
 
-#games {
+/* #games {
   display: none;
 }
 
@@ -267,4 +267,4 @@ fig img:hover{
 
 #movies {
   display: none;
-}
+} */
